--- a/Samples/Company.Mvc/Views/Shared/CurrencyEditor.cshtml
+++ b/Samples/Company.Mvc/Views/Shared/CurrencyEditor.cshtml
@@ -1,5 +1,5 @@
 ﻿@model MvcEditorModel
 <div class="input-group">
     <span class="input-group-addon">@System.Globalization.CultureInfo.CurrentUICulture.NumberFormat.CurrencySymbol</span>
-    <input type="number" class="form-control" id="@Model.Metadata.Property.Name" name="@Model.Metadata.Property.Name" value="@Model.Value" step="0.01"/>
+    <input type="number" class="form-control" id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName" value="@Model.Value" step="0.01"/>
 </div>
