--- a/Samples/Company.Mvc/Views/Shared/EmailAddressEditor.cshtml
+++ b/Samples/Company.Mvc/Views/Shared/EmailAddressEditor.cshtml
@@ -1,2 +1,2 @@
 ﻿@model MvcEditorModel
-<input type="email" class="form-control" id="@Model.Metadata.Property.Name" name="@Model.Metadata.Property.Name" value="@Model.Value"/>
+<input type="email" class="form-control" id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName" value="@Model.Value"/>
