--- a/Samples/Company.Mvc/Views/Shared/EntityEditor.cshtml
+++ b/Samples/Company.Mvc/Views/Shared/EntityEditor.cshtml
@@ -1,81 +1,39 @@
 ﻿@model MvcEditorModel
 <div class="input-group">
-    <input type="text" id="@(Model.Metadata.Property.Name)_Name" readonly="readonly" class="form-control" value="@Model.Value">
-    <input type="hidden" id="@(Model.Metadata.Property.Name)_Value" name="@Model.Metadata.Property.Name" value="@(Model.Value != null? ((System.Data.Entity.EntityBase)Model.Value).Index.ToString() : "")" />
+    <input type="text" id="@(Model.Metadata.ClrName)_Name" readonly="readonly" class="form-control" value="@Model.Value">
+    <input type="hidden" id="@(Model.Metadata.ClrName)_Value" name="@Model.Metadata.ClrName" value="@(Model.Value != null? ((System.Data.Entity.EntityBase)Model.Value).Index.ToString() : "")" />
     <span class="input-group-btn">
-        <button id="@(Model.Metadata.Property.Name)_Select" class="btn btn-default" type="button">Select</button>
-        <button id="@(Model.Metadata.Property.Name)_Clear" class="btn btn-default" type="button">Clear</button>
+        <button id="@(Model.Metadata.ClrName)_Select" class="btn btn-default" type="button">Select</button>
+        <button id="@(Model.Metadata.ClrName)_Clear" class="btn btn-default" type="button">Clear</button>
     </span>
 </div>
 <script type="text/javascript">
     $(function () {
-        function initSelector(result) {
-            result.find('[data-nav=true]').each(function (index, element) {
-                element = $(element);
-                element.attr('data-href', element.attr('href'));
-                element.click(function () {
-                    $.ajax({
-                        cache: false,
-                        url: $(this).attr('data-href'),
-                        success: function (result) {
-                            result = $(result);
-                            initSelector(result);
-                            $('#dialogContent').html(result);
-                        }
-                    });
-                });
-                element.removeAttr('href');
-            });
-            var tree = result.find('#selectorparentview');
-            tree.find('[data-nav=true]').each(function (index, element) {
-                element = $(element);
-                element.attr('href', element.attr('data-href'));
-                element.removeAttr('data-href');
-            });
-            if (tree.length > 0) {
-                $(tree[0]).bind('select_node.jstree', function (node, selected) {
-                    $.ajax({
-                        cache: false,
-                        url: selected.node.a_attr.href,
-                        success: function (result) {
-                            result = $(result);
-                            initSelector(result);
-                            $('#dialogContent').html(result);
-                        }
-                    });
-                });
-                $(tree[0]).jstree();
+        var name = $('#@(Model.Metadata.ClrName)_Name');
+        var value = $('#@(Model.Metadata.ClrName)_Value');
+        $('#@(Model.Metadata.ClrName)_Select').click(function () {
+            if (window.showModalDialog != undefined) {
+                var result = window.showModalDialog('@Url.RouteUrl(new { controller = Model.Metadata.ClrType.Name, action = "Selector" })',
+                    null,
+                    'dialogHeight:720px;dialogWidth:1024px');
+                if (result == undefined)
+                    result = window.returnValue;
+                if (result == null)
+                    return;
+                name.val(result.name);
+                value.val(result.value);
             }
-        }
-        var name = $('#@(Model.Metadata.Property.Name)_Name');
-        var value = $('#@(Model.Metadata.Property.Name)_Value');
-        $('#@(Model.Metadata.Property.Name)_Select').click(function () {
-            $.ajax({
-                cache: false,
-                url: '@Url.RouteUrl(new { controller = Model.Metadata.Property.PropertyType.Name, action = "Selector" })',
-                error: function (result) {
-                    if (result.status == 404)
-                        dialog('There is some errors', '<p>Can not found the selector.</p>', function () { $('#dialog').modal('hide'); });
-                    else
-                        dialog('There is some errors', '<p>Site throw unexpected errors.</p>', function () { $('#dialog').modal('hide'); });
-                },
-                success: function (result) {
-                    result = $(result);
-                    initSelector(result);
-                    dialog('@(Model.Metadata.Name) selector dialog', result, function () {
-                        var radios = $('#dialog').find(':checked');
-                        if (radios.length == 0) {
-                            alert('Please select a item.');
-                            return;
-                        }
-                        value.val($(radios[0]).val());
-                        name.val($(radios[0]).attr('data-name'));
-                        $('#dialog').modal('hide');
-                    });
-                }
-            });
+            else {
+                window.open('@Url.RouteUrl(new { controller = Model.Metadata.ClrType.Name, action = "Selector" })',
+                    null,
+                    'dialog=1,modal=1,location=0,menubar=0,resizable=0,scrollbars=0,status=0,toolbar=0,height=720,width=1024')
+            }
+            window.selectCompleted = function (result) {
+                name.val(result.name);
+                value.val(result.value);
+            }
         });
-        $('#@(Model.Metadata.Property.Name)_Clear').click(function () {
+        $('#@(Model.Metadata.ClrName)_Clear').click(function () {
             name.val('');
             value.val('');
         });
