--- a/Samples/Company.Mvc/Views/Shared/EnumEditor.cshtml
+++ b/Samples/Company.Mvc/Views/Shared/EnumEditor.cshtml
@@ -1,19 +1,19 @@
 ﻿@model MvcEditorModel
 @{
     EntityExtension.EnumItem[] items;
-    if (Model.Metadata.Property.PropertyType.IsGenericType)
+    if (Model.Metadata.ClrType.IsGenericType)
     {
-        items = Html.EnumAnalyze(Model.Metadata.Property.PropertyType.GetGenericArguments()[0]);
+        items = Html.EnumAnalyze(Model.Metadata.ClrType.GetGenericArguments()[0]);
     }
     else
     {
-        items = Html.EnumAnalyze(Model.Metadata.Property.PropertyType);
+        items = Html.EnumAnalyze(Model.Metadata.ClrType);
     }
 }
-@if (Model.Metadata.Property.PropertyType.GetCustomAttributes(typeof(FlagsAttribute), true).Length == 0)
+@if (Model.Metadata.ClrType.GetCustomAttributes(typeof(FlagsAttribute), true).Length == 0)
 {
-    <select id="@Model.Metadata.Property.Name" name="@Model.Metadata.Property.Name" class="form-control" style="padding-right: 12px;">
-        @if (Model.Metadata.Property.PropertyType.IsGenericType)
+    <select id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName" class="form-control" style="padding-right: 12px;">
+        @if (Model.Metadata.ClrType.IsGenericType)
         {
             <option value="" @Html.Raw(Model.Value == null ? " selected=\"selected\"" : "")></option>
         }
@@ -25,20 +25,20 @@
 }
 else
 {
-    EnumConverter converter = new EnumConverter(Model.Metadata.Property.PropertyType);
-    <div id="@Model.Metadata.Property.Name">
+    EnumConverter converter = new EnumConverter(Model.Metadata.ClrType);
+    <div id="@Model.Metadata.ClrName">
         @for (int i = 0; i < items.Length; i++)
         {
             <div class="checkbox-inline">
-                <label><input type="checkbox" value="@items[i].Value" @Html.Raw(((dynamic)Model.Value).HasFlag((Enum)Enum.ToObject(Model.Metadata.Property.PropertyType, items[i].Value)) ? " checked=\"checked\"" : "") />@items[i].Name</label>
+                <label><input type="checkbox" value="@items[i].Value" @Html.Raw(((dynamic)Model.Value).HasFlag((Enum)Enum.ToObject(Model.Metadata.ClrType, items[i].Value)) ? " checked=\"checked\"" : "") />@items[i].Name</label>
             </div>
         }
     </div>
-    <input type="hidden" id="@(Model.Metadata.Property.Name)_Value" name="@Model.Metadata.Property.Name" value="@((int)Model.Value)" />
+    <input type="hidden" id="@(Model.Metadata.ClrName)_Value" name="@Model.Metadata.ClrName" value="@((int)Model.Value)" />
     <script type="text/javascript">
         $(function () {
-            var value = $('#@(Model.Metadata.Property.Name)_Value');
-            var checkbox = $('#@Model.Metadata.Property.Name').find(':checkbox');
+            var value = $('#@(Model.Metadata.ClrName)_Value');
+            var checkbox = $('#@Model.Metadata.ClrName').find(':checkbox');
             checkbox.click(function () {
                 var num = 0;
                 checkbox.each(function (index, element) {
