change for to foreach

--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/Detail.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/Detail.cshtml
@@ -23,12 +23,12 @@
     </div>
     <div class="panel-body">
         <form id="form" class="form-horizontal" role="form">
-            @for (int i = 0; i < Model.Properties.Length; i++)
+            @foreach (var property in Model.Properties)
             {
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">@Model.Properties[i].Name</label>
+                    <label class="col-sm-2 control-label">@property.Name</label>
                     <div class="col-sm-8">
-                        <p class="form-control-static">@EntityValueConverter.GetConverter(Model.Properties[i]).ConvertToString(Model.Properties[i].GetValue(Model.Item))</p>
+                        <p class="form-control-static">@EntityValueConverter.GetConverter(property).ConvertToString(property.GetValue(Model.Item))</p>
                     </div>
                 </div>
             }
