--- a/Samples/Company.Mvc/Views/Shared/Index.cshtml
+++ b/Samples/Company.Mvc/Views/Shared/Index.cshtml
@@ -86,7 +86,7 @@
                                         <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#">
                                             <span class="caret"></span>
                                         </a>
-                                        <ul class="dropdown-menu">
+                                        <ul class="dropdown-menu dropdown-menu-right">
                                             <li><a class="btn" href="@Html.Raw(Url.Action("Detail", new { id = item.Index }))"><i class="glyphicon glyphicon-list-alt"></i>Detail</a></li>
                                             @if (Model.Metadata.EditRoles.All(t => User.IsInRole(t)))
                                             {
@@ -96,7 +96,7 @@
                                             {
                                                 <li><a class="btn" href="javascript:remove('@item.Index')"><i class="glyphicon glyphicon-remove"></i>Delete</a></li>
                                             }
-                                            @foreach(var button in Model.ItemButtons)
+                                            @foreach (var button in Model.ItemButtons)
                                             {
                                                 button.SetTarget(provider, item);
                                                 <li><a href="@Html.Raw(button.Target)" title="@button.Tooltip">@button.Icon@button.Name</a></li>
