--- a/Samples/Company.Mvc/Views/Shared/Selector.cshtml
+++ b/Samples/Company.Mvc/Views/Shared/Selector.cshtml
@@ -61,7 +61,7 @@
         <div class="btn-group">
             @if (Model.Metadata.SearchProperties.Count() > 0)
             {
-                <a class="btn btn-default" href="@Url.Action("Search",new {actionName = "MultipleSelector"})">Search</a>
+                <a class="btn btn-default" href="@Url.Action("Search",new {actionName = "Selector"})">Search</a>
             }
             <button class="btn btn-default" onclick="ok()">OK</button>
         </div>
