update use Html.Raw to write url

--- a/Samples/Company.Mvc/Views/Shared/BooleanEditor.cshtml
+++ b/Samples/Company.Mvc/Views/Shared/BooleanEditor.cshtml
@@ -29,7 +29,7 @@
             <input type="radio" name="@Model.Metadata.ClrName" value="false" @Html.Raw(value.HasValue && !value.Value ? "" : "checked=\"checked\"") />No
         </label>
     </div>
-    @if (Model.Value is bool?)
+    @if (Model.Value == null || Model.Value is bool?)
     {
         <div class="radio-inline">
             <label>
