--- a/Samples/Company.Mvc/Views/Shared/Detail.cshtml
+++ b/Samples/Company.Mvc/Views/Shared/Detail.cshtml
@@ -12,8 +12,8 @@
     }
 }
 <ol class="breadcrumb">
-    <li><a href="@Url.Action("Index","Home")">Home</a></li>
-    <li><a href="@Url.Action("Index")">@Model.Metadata.Name</a></li>
+    <li><a href="@Html.Raw(Url.Action("Index","Home"))">Home</a></li>
+    <li><a href="@Html.Raw(Url.Action("Index"))">@Model.Metadata.Name</a></li>
     <li class="active">Detail</li>
 </ol>
 <div class="panel panel-default">
@@ -34,7 +34,7 @@
             }
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                    <a href="@Url.Action("Index")" class="btn btn-default">Back</a>
+                    <a href="@Html.Raw(Url.Action("Index"))" class="btn btn-default">Back</a>
                 </div>
             </div>
         </form>
