fix bug that radio not checked if value is false

--- a/Samples/Company.Mvc/Views/Shared/BooleanEditor.cshtml
+++ b/Samples/Company.Mvc/Views/Shared/BooleanEditor.cshtml
@@ -26,7 +26,7 @@
     </div>
     <div class="radio-inline">
         <label>
-            <input type="radio" name="@Model.Metadata.ClrName" value="false" @Html.Raw(value.HasValue && !value.Value ? "" : "checked=\"checked\"") />No
+            <input type="radio" name="@Model.Metadata.ClrName" value="false" @Html.Raw(value.HasValue && value.Value ? "" : "checked=\"checked\"") />No
         </label>
     </div>
     @if (Model.Value == null || Model.Value is bool?)
