--- a/Samples/Company.Mvc/Views/Shared/SexEditor.cshtml
+++ b/Samples/Company.Mvc/Views/Shared/SexEditor.cshtml
@@ -26,7 +26,7 @@
     </div>
     <div class="radio-inline">
         <label>
-            <input type="radio" name="@Model.Metadata.ClrName" value="false" @Html.Raw(value.HasValue && !value.Value ? "" : "checked=\"checked\"") />Female
+            <input type="radio" name="@Model.Metadata.ClrName" value="false" @Html.Raw(value.HasValue && value.Value ? "" : "checked=\"checked\"") />Female
         </label>
     </div>
     @if (Model.Value is bool?)
